--- a/www/onsen-css-components-default.css
+++ b/www/onsen-css-components-default.css
@@ -117,7 +117,6 @@ select:focus {
   margin: 0;
   -webkit-appearance: none;
   appearance: none;
-  pointer-events: none;
   width: 51px;
   height: 44px;
   margin-top: -6px;
@@ -1146,7 +1145,6 @@ select:focus {
   margin: 0;
   -webkit-appearance: none;
   appearance: none;
-  pointer-events: none;
 }
 .button-bar__item:first-child > .button-bar__button {
   border-left: 1px solid #1284ff;
@@ -1361,7 +1359,6 @@ select:focus {
   margin: 0;
   -webkit-appearance: none;
   appearance: none;
-  pointer-events: none;
 }
 .tab-bar__button {
   position: relative;
@@ -1720,7 +1717,6 @@ select:focus {
   margin: 0;
   -webkit-appearance: none;
   appearance: none;
-  pointer-events: none;
   height: 0;
   width: 0;
 }
@@ -1850,7 +1846,6 @@ select:focus {
   margin: 0;
   -webkit-appearance: none;
   appearance: none;
-  pointer-events: none;
 }
 .checkbox--noborder {
   position: relative;
@@ -1905,7 +1900,6 @@ select:focus {
   margin: 0;
   -webkit-appearance: none;
   appearance: none;
-  pointer-events: none;
   height: 0;
   width: 0;
 }
@@ -2282,7 +2276,6 @@ select:focus {
   margin: 0;
   -webkit-appearance: none;
   appearance: none;
-  pointer-events: none;
   height: 0px;
   width: 0px;
 }
